# risk_stratifier

./: LICENSE  README.md  pyproject.toml
docs/: assessing_the_best_model.ipynb  handle_missingness.ipynb  preprepared_models.ipynb  validate_data.ipynb
src/risk_stratifier/: __init__.py  _data_validation.py  _utils.py  binary_nested_cross_validate.py  data_validation.py  handling_missings.py  models.py  nested_cross_validate.py  toy_data.py  utils.py
tests/: test_binary_nested_cross_validate.py  test_data_validation.py  test_handling_missings.py  test_models.py  test_nested_cross_validate.py
